--- a/README.Rmd
+++ b/README.Rmd
@@ -4,13 +4,6 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
-
 # darkOPI <img src='hexicon.png' align="right" height="139" />
 
 <!-- badges: start -->
@@ -54,7 +47,7 @@ Maximilian Pfau, MD: [maximilian.pfau@iob.ch](maximilian.pfau@iob.ch)
 }
 ```
 
-### Workflow
+### Manual
 
 To run the up, open the `2023-12-14_Adaptometry-App-V7.R` file.
 
@@ -63,7 +56,7 @@ The IP address of the S-MAIA device must be adjusted in the following line:
 maia.opiInitialize(ip = "192.168.1.2", port=5555)
 ```
 
-# darkOPI
+### Workflow
 <img src='screenshot.png' align="right" height="300" />
 
 
